hphp/hack/test/typecheck/is_expression/vec.php.like_types.exp
File "vec.php", line 6, characters 17-18:
Invalid argument (Typing[4110])
File "vec.php", line 25, characters 22-32:
Expected ~vec<string> because it is an unenforceable type
File "vec.php", line 4, characters 13-15:
But got vec<mixed>
File "vec.php", line 4, characters 13-15:
The type vec expects 1 type parameter(s) (Typing[4101])
File "hackarray.hhi", line 13, characters 22-24:
Definition is here
File "vec.php", line 13, characters 17-18:
Invalid argument (Typing[4110])
File "vec.php", line 25, characters 22-32:
Expected ~vec<string> because it is an unenforceable type
File "vec.php", line 11, characters 13-18:
But got vec<mixed>
